--- a/index.html
+++ b/index.html
@@ -8,5 +8,36 @@
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
   <body>
+    <!-- HEADER -->
+    <!-- Parte 1 del header -->
+    <header>
+      <div>
+        <!-- Logo -->
+        <figure>Imagen Logo</figure>
+        <!-- Nav -->
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Projects</li>
+            <li>Services</li>
+            <li>Avout</li>
+          </ul>
+        </nav>
+        <div>Contact Us</div>
+      </div>
+
+      <!-- Parte 2 del header -->
+      <div>
+        <div>
+          <h1>Empower Your Business With Stunning Design!</h1>
+          <p>Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+          <p>Get in touch</p>
+          <p>See our work</p>
+          
+        </div>
+        <div>Imagenes</div>
+
+      </div>
+    </header>
   </body>
 </html>
