Se ha creado en html el Header y la sección 1 Partners

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
       <div>
         <!-- Logo -->
-        <figure>Imagen Logo</figure>
-        <!-- Nav -->
+        <figure><img src="/resources/images/logos/circle.svg" alt="Logo Circle"></figure>
+        <!-- NavBar -->
         <nav>
           <ul>
             <li>Home</li>
@@ -30,14 +30,35 @@
       <div>
         <div>
           <h1>Empower Your Business With Stunning Design!</h1>
-          <p>Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+          <p>
+            Circle is a digital design and development studio. We design and
+            develop astonishing websites and mobile apps.
+          </p>
           <p>Get in touch</p>
           <p>See our work</p>
-          
         </div>
         <div>Imagenes</div>
-
       </div>
     </header>
+
+    <!-- SECTION 1 -->
+    <!-- Partners -->
+    <section id="partners"><figure><img src="/resources/images/logos/airbnb-logo.svg" alt="Logo airbnb"></figure>
+    <figure><img src="/resources/images/logos/google-logo.svg" alt="Logo Google"></figure>
+    <figure><img src="/resources/images/logos/microsoft-logo.svg" alt="Logo Microsoft"></figure>
+    <figure><img src="/resources/images/logos/fedex-logo.svg" alt="Logo Fedex"></figure>
+    <figure><img src="/resources/images/logos/amazon-logo.svg" alt="Logo Amazon"></figure></section>
+
+    <!-- SECTION 2 -->
+    <!-- Recent projects -->
+    <section id="recent-projects">
+      <div>
+        <img src="/resources/images/projects-section/1.jpg" alt="imagen del proyecto 1">
+
+      </div>
+      <div></div>
+      <div></div>
+
+    </section>
   </body>
 </html>
