Se ha creado en html Section 2 Recent Projectss

--- a/index.html
+++ b/index.html
@@ -54,11 +54,22 @@
     <section id="recent-projects">
       <div>
         <img src="/resources/images/projects-section/1.jpg" alt="imagen del proyecto 1">
-
+        <h4>Simplify</h4>
+        <p>UI Design & App Development</p>
+        <p>Learn more</p>
       </div>
-      <div></div>
-      <div></div>
-
+      <div>
+        <img src="/resources/images/projects-section/2.jpg" alt="imagen del proyecto 2">
+        <h4>Dashcoin</h4>
+        <p>Web Development</p>
+        <p>Learn more</p>
+      </div>
+      <div>
+        <img src="/resources/images/projects-section/3.jpg" alt="imagen del proyecto 3">
+        <h4>Vectorify</h4>
+        <p>User Experience Design</p>
+        <p>Learn more</p>
+      </div>
     </section>
   </body>
 </html>
