Se ha creado en html la Section 3 Client Reviews

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header>
       <div>
         <!-- Logo -->
-        <figure><img src="/resources/images/logos/circle.svg" alt="Logo Circle"></figure>
+        <figure>
+          <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
+        </figure>
         <!-- NavBar -->
         <nav>
           <ul>
@@ -43,32 +45,92 @@
 
     <!-- SECTION 1 -->
     <!-- Partners -->
-    <section id="partners"><figure><img src="/resources/images/logos/airbnb-logo.svg" alt="Logo airbnb"></figure>
-    <figure><img src="/resources/images/logos/google-logo.svg" alt="Logo Google"></figure>
-    <figure><img src="/resources/images/logos/microsoft-logo.svg" alt="Logo Microsoft"></figure>
-    <figure><img src="/resources/images/logos/fedex-logo.svg" alt="Logo Fedex"></figure>
-    <figure><img src="/resources/images/logos/amazon-logo.svg" alt="Logo Amazon"></figure></section>
+    <section id="partners">
+      <figure>
+        <img src="/resources/images/logos/airbnb-logo.svg" alt="Logo airbnb" />
+      </figure>
+      <figure>
+        <img src="/resources/images/logos/google-logo.svg" alt="Logo Google" />
+      </figure>
+      <figure>
+        <img
+          src="/resources/images/logos/microsoft-logo.svg"
+          alt="Logo Microsoft"
+        />
+      </figure>
+      <figure>
+        <img src="/resources/images/logos/fedex-logo.svg" alt="Logo Fedex" />
+      </figure>
+      <figure>
+        <img src="/resources/images/logos/amazon-logo.svg" alt="Logo Amazon" />
+      </figure>
+    </section>
 
     <!-- SECTION 2 -->
     <!-- Recent projects -->
     <section id="recent-projects">
       <div>
-        <img src="/resources/images/projects-section/1.jpg" alt="imagen del proyecto 1">
+        <img
+          src="/resources/images/projects-section/1.jpg"
+          alt="imagen del proyecto 1"
+        />
         <h4>Simplify</h4>
         <p>UI Design & App Development</p>
         <p>Learn more</p>
       </div>
       <div>
-        <img src="/resources/images/projects-section/2.jpg" alt="imagen del proyecto 2">
+        <img
+          src="/resources/images/projects-section/2.jpg"
+          alt="imagen del proyecto 2"
+        />
         <h4>Dashcoin</h4>
         <p>Web Development</p>
         <p>Learn more</p>
       </div>
       <div>
-        <img src="/resources/images/projects-section/3.jpg" alt="imagen del proyecto 3">
+        <img
+          src="/resources/images/projects-section/3.jpg"
+          alt="imagen del proyecto 3"
+        />
         <h4>Vectorify</h4>
         <p>User Experience Design</p>
         <p>Learn more</p>
+      </div>
+    </section>
+
+    <!-- SECTION 3 -->
+    <!-- Client reviews -->
+    <section id="client-reviews">
+      <!-- Fondo azul oscuro -->
+      <div id="back-images">
+        <!-- Lo 4 emojis en deben posicionarse en cada punta -->
+      
+        <img
+          src="/resources/images/testimonial-section/memoji-1.png"
+          alt="emoji 1"
+        /><img
+          src="/resources/images/testimonial-section/memoji-2.png"
+          alt="emoji 1"
+        /><img
+          src="/resources/images/testimonial-section/memoji-3.png"
+          alt="emoji 3"
+        /><img
+          src="/resources/images/testimonial-section/memoji-4.png"
+          alt="emoji 4"
+        />
+      </div>
+
+      <div>
+        <h3>Hear What Our Clients Have to Say</h3>
+        <p>“Circle helped us through every stage of our startup. We really enjoyed working with you.”</p>
+        <!-- Datos del perfil -->
+        <div>
+          <!-- Circulo para la foto de perfil -->
+          <!-- <img src="/resources/images/testimonial-section/orbit.png" alt="orbit"> -->
+          <img src="/resources/images/testimonial-section/profile.png" alt="foto de perfil">
+          <p>Kristin Watson</p>
+          <p>Booking.com</p>
+        </div>
       </div>
     </section>
   </body>
