--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- SECTION 2 -->
     <!-- Recent projects -->
     <section id="recent-projects">
-      <div>
+      <article>
         <img
           src="/resources/images/projects-section/1.jpg"
           alt="imagen del proyecto 1"
@@ -77,8 +77,8 @@
         <h4>Simplify</h4>
         <p>UI Design & App Development</p>
         <p>Learn more</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <img
           src="/resources/images/projects-section/2.jpg"
           alt="imagen del proyecto 2"
@@ -86,8 +86,8 @@
         <h4>Dashcoin</h4>
         <p>Web Development</p>
         <p>Learn more</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <img
           src="/resources/images/projects-section/3.jpg"
           alt="imagen del proyecto 3"
@@ -95,7 +95,7 @@
         <h4>Vectorify</h4>
         <p>User Experience Design</p>
         <p>Learn more</p>
-      </div>
+      </article>
     </section>
 
     <!-- SECTION 3 -->
