Creado el footer en html

--- a/index.html
+++ b/index.html
@@ -169,6 +169,27 @@
       </form>
     </section>
 
-    
+    <!-- FOOTER -->
+    <footer>
+      <!-- Logo y dirección -->
+      <div>
+        <img src="/resources/images/logos/circle.svg" alt="Logo Circle">
+        <address>2972 Westheimer Rd. Santa Ana, Illinois 85486 </address>
+      </div>
+      <!-- Nav footer -->
+      <nav>
+        <ul>
+          <li>Team</li>
+          <li>Services</li>
+          <li>About Us</li>
+          <li>Press</li>
+          <li>Projects</li>
+          <li>Privacy Policy</li>
+        </ul>
+      </nav>
+    </footer>
+
+
+
   </body>
 </html>
