--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circle Agency</title>
+    <!-- Style CSS -->
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
   <body>
@@ -188,8 +189,6 @@
         </ul>
       </nav>
     </footer>
-
-
 
   </body>
 </html>
