--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div>
             <h4>Simplify</h4>
             <p>UI Design & App Development</p>
-            <p>Learn more</p>
+            <p class="learn-more">Learn more</p>
           </div>
         </article>
         <article>
@@ -102,18 +102,19 @@
             src="/resources/images/projects-section/2.jpg"
             alt="imagen del proyecto 2"
           />
-          <h4>Dashcoin</h4>
-          <p>Web Development</p>
-          <p>Learn more</p>
+          <div><h4>Dashcoin</h4>
+            <p>Web Development</p>
+            <p class="learn-more">Learn more</p></div>
+          
         </article>
         <article>
           <img
             src="/resources/images/projects-section/3.jpg"
             alt="imagen del proyecto 3"
           />
-          <h4>Vectorify</h4>
-          <p>User Experience Design</p>
-          <p>Learn more</p>
+          <div><h4>Vectorify</h4>
+            <p>User Experience Design</p>
+            <p class="learn-more">Learn more</p></div>
         </article>
       </div>
     </section>
@@ -143,7 +144,9 @@
           </div>
         </div>
       </div>
+      <!--  -->
       <!-- Lo 4 emojis en deben posicionarse en cada punta -->
+      
       <div class="emoji top-left">
         <img
           src="/resources/images/testimonial-section/memoji-1.png"
@@ -173,42 +176,48 @@
     <!-- SECTION 4 -->
     <!--  Services -->
     <section id="services">
+      <div><h3>Our Services</h3></div>
+      <div id="contain-services">
       <article>
-        <img
+        <div class="icon1"></div>
+        <!-- <img
           src="/resources/images/services-section/icons/1.svg"
           alt="icono de pluma"
-        />
+        /> -->
         <h5>User Interface Design</h5>
         <p>
           Circle provides you with a stunning user interface design that is
           accessible to everyone.
         </p>
-        <p>Learn more</p>
+        <p class="learn-more">Learn more</p>
       </article>
       <article>
-        <img
+        <div class="icon2"></div>
+        <!-- <img
           src="/resources/images/services-section/icons/2.svg"
           alt="icono de puntero"
-        />
+        /> -->
         <h5>User Experience Design</h5>
         <p>
           Circle always focuses on delivering the best user experience to your
           customers.
         </p>
-        <p>Learn more</p>
+        <p class="learn-more">Learn more</p>
       </article>
       <article>
-        <img
+        <div class="icon3"></div>
+        <!-- <img
           src="/resources/images/services-section/icons/3.svg"
           alt="icono de aplicacion"
-        />
+        /> -->
         <h5>Application Development</h5>
         <p>
           We develop high-quality mobile and web applications using the latest
           technology stack.
         </p>
-        <p>Learn more</p>
+        <p class="learn-more">Learn more</p>
       </article>
+    </div>
     </section>
 
     <!-- SECTION 5 -->
@@ -242,5 +251,6 @@
         </ul>
       </nav>
     </footer>
+    <script src="/resources/js/index.js"></script>
   </body>
 </html>
