--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             alt="imagen del proyecto 1"
           />
           <div>
-            <h4>Simplify</h4>
-            <p>UI Design & App Development</p>
+            <h4 class="title-js"></h4>
+            <p class="body-js"></p>
             <p class="learn-more">Learn more</p>
           </div>
         </article>
@@ -102,8 +102,8 @@
             src="/resources/images/projects-section/2.jpg"
             alt="imagen del proyecto 2"
           />
-          <div><h4>Dashcoin</h4>
-            <p>Web Development</p>
+          <div><h4 class="title-js"></h4>
+            <p class="body-js"></p>
             <p class="learn-more">Learn more</p></div>
           
         </article>
@@ -112,8 +112,8 @@
             src="/resources/images/projects-section/3.jpg"
             alt="imagen del proyecto 3"
           />
-          <div><h4>Vectorify</h4>
-            <p>User Experience Design</p>
+          <div><h4 class="title-js"></h4>
+            <p class="body-js"></p>
             <p class="learn-more">Learn more</p></div>
         </article>
       </div>
