--- a/project.html
+++ b/project.html
@@ -1,118 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
     <!-- Style CSS -->
     <link rel="stylesheet" href="resources/styles/style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <!-- HEADER -->
     <!-- Parte 1 del header -->
     <header>
-        <div>
-          <!-- Logo -->
-          <figure>
-            <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
-          </figure>
-          <!-- NavBar -->
-          <nav>
-            <ul>
-              <li>Home</li>
-              <li>Projects</li>
-              <li>Services</li>
-              <li>Avout</li>
-            </ul>
-          </nav>
-          <div>Contact Us</div>
-        </div>
+      <div id="logo-navbar">
+        <!-- Logo -->
+        <figure>
+          <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
+        </figure>
+        <!-- NavBar -->
+        <nav>
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/index.html#recent-projects">Projects</a></li>
+            <li><a href="/index.html#services">Services</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </nav>
+        <div class="btn-blue"><a href="/contact-us.html">Contact Us</a></div>
+      </div>
+    </header>
 
-        <!-- header del proyecto -->
-        <header id="project">
-            <h1>Simplify</h1>            
-            <div>
-                <h5>UI Design & App Development</h5>
-                <p>Completed on <time>June 22, 2021</time></p> 
-            </div>
-        </header>
+    <main>
+      <h1 class="title-project"></h1>
+      <div>
+        <h4 class="title-project"></h4>
+        <p>Completed on <time> June 22, 2021</time></p>
+      </div>
 
-        <img src="/resources/images/projects-section/1.jpg" alt="Imagen proyecto 1">
+      <figure>
+        <img
+          src="/resources/images/projects-section/1.jpg"
+          alt="Imagen proyecto 1"
+        />
+      </figure>
+    </main>
 
-        <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt quix duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.</p>
-        <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nis cillum minim tempor enim. </p>
+    <article id="body-project"></article>
 
-
-        
-    <!-- Other Projects -->
-    <section id="other-projects">
+    <!-- SECTION 2 -->
+    <!-- Recent projects -->
+    <section id="recent-projects">
+      <h3>Recent Projects</h3>
+      <div id="articles-projects">
         <article>
           <img
-            src="/resources/images/projects-section/4.jpg"
+            src="/resources/images/projects-section/1.jpg"
             alt="imagen del proyecto 1"
           />
-          <h4>Orbit</h4>
-          <p>UI Design</p>
-          <p>Learn more</p>
+          <div>
+            <h4 class="title-js"></h4>
+            <p class="body-js"></p>
+            <p class="learn-more"><a href="/project.html">Learn more</a></p>
+          </div>
         </article>
         <article>
           <img
-            src="/resources/images/projects-section/5.jpg"
+            src="/resources/images/projects-section/2.jpg"
             alt="imagen del proyecto 2"
           />
-          <h4>Purify</h4>
-          <p>UI/UX Design</p>
-          <p>Learn more</p>
+          <div>
+            <h4 class="title-js"></h4>
+            <p class="body-js"></p>
+            <p class="learn-more"><a href="/project.html">Learn more</a></p>
+          </div>
         </article>
         <article>
           <img
-            src="/resources/images/projects-section/6.jpg"
+            src="/resources/images/projects-section/3.jpg"
             alt="imagen del proyecto 3"
           />
-          <h4>CryptoPie</h4>
-          <p>App Developmentn</p>
-          <p>Learn more</p>
+          <div>
+            <h4 class="title-js"></h4>
+            <p class="body-js"></p>
+            <p class="learn-more"><a href="/project.html">Learn more</a></p>
+          </div>
         </article>
-      </section>
-
-
+      </div>
+    </section>
 
     <!-- Questions form -->
     <section id="questions-form">
-        <h3>Do you have any questions?</h3>
-        <p>Let us help you!</p>
-        <form id="subscribe">
-          <label for="email"></label>
-          <input type="email" placeholder="Enter your email" name="email">ç
-          <input type="button" value="Subscribe">
-        </form>
-      </section>
+      <h3>Do you have any questions?</h3>
+      <p>Let us help you!</p>
+      <form id="subscribe">
+        <label for="email"></label>
+        <input type="email" placeholder="Enter your email" name="email" />
+        <input type="button" value="Subscribe" />
+      </form>
+    </section>
 
-
-       <!-- FOOTER -->
+    <!-- FOOTER -->
     <footer>
-        <!-- Logo y dirección -->
-        <div>
-          <img src="/resources/images/logos/circle.svg" alt="Logo Circle">
-          <address>2972 Westheimer Rd. Santa Ana, Illinois 85486 </address>
-        </div>
-        <!-- Nav footer -->
-        <nav>
-          <ul>
-            <li>Team</li>
-            <li>Services</li>
-            <li>About Us</li>
-            <li>Press</li>
-            <li>Projects</li>
-            <li>Privacy Policy</li>
-          </ul>
-        </nav>
-      </footer>
-  
+      <!-- Logo y dirección -->
+      <div>
+        <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
+        <address>
+          2972 Westheimer Rd. Santa Ana,<br />
+          Illinois 85486
+        </address>
+      </div>
+      <!-- Nav footer -->
+      <nav>
+        <ul>
+          <li><a href="#">Team</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#">About Us</a></li>
 
+          <li><a href="#">Press</a></li>
+          <li><a href="#recent-projects">Projects</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </nav>
+    </footer>
 
-
-    
-</body>
+    <script src="/resources/js/project.js"></script>
+  </body>
 </html>
