--- a/project.html
+++ b/project.html
@@ -14,8 +14,8 @@
     <header>
       <div id="logo-navbar">
         <!-- Logo -->
-        <figure>
-          <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
+        <figure><a href="/index.html"><img src="/resources/images/logos/circle.svg" alt="Logo Circle" /></a>
+          
         </figure>
         <!-- NavBar -->
         <nav>
@@ -31,10 +31,10 @@
     </header>
 
     <main>
-      <h1 class="title-project"></h1>
+      <h1 id="title-project"></h1>
       <div>
-        <h4 class="title-project"></h4>
-        <p>Completed on <time> June 22, 2021</time></p>
+        <h4 id="sub-title-project"></h4>
+        <p>Completed on <time> 2/2/22</time></p>
       </div>
 
       <figure>
@@ -45,7 +45,7 @@
       </figure>
     </main>
 
-    <article id="body-project"></article>
+    <article id="body-project"><p></p></article>
 
     <!-- SECTION 2 -->
     <!-- Recent projects -->
