Se han arreglado errores de la sección services y projects, además del readme

--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
       <div id="logo-navbar">
         <!-- Logo -->
         <figure>
-          <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
+          <a href="/index.html"><img src="/resources/images/logos/circle.svg" alt="Logo Circle" /></a>
         </figure>
         <!-- NavBar -->
         <nav>
@@ -76,7 +76,7 @@
     <footer>
       <!-- Logo y dirección -->
       <div>
-        <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
+        <a href="/index.html"><img src="/resources/images/logos/circle.svg" alt="Logo Circle" /></a>
         <address>
           2972 Westheimer Rd. Santa Ana,<br />
           Illinois 85486
