--- a/contact-us.html
+++ b/contact-us.html
@@ -29,7 +29,7 @@
     </header>
 
     <!-- Form Concatc Us -->
-    <form id="contact-us">
+    <form id="contact-us" action="" method="POST">
       <h1>Contact Us</h1>
 
       <div>
@@ -70,6 +70,7 @@
         ></textarea>
       </div>
       <button class="btn-blue" type="submit">Submit</button>
+      <!-- <input id="addPost" class="btn-blue" type="submit" value="Submit" /> -->
     </form>
 
     <!-- FOOTER -->
