--- a/index.html
+++ b/index.html
@@ -18,15 +18,27 @@
           <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
         </figure>
         <!-- NavBar -->
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#recent-projects">Projects</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#">About</a></li>
+        <nav class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#recent-projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           </ul>
+
+          
         </nav>
-        <div class="btn-blue"><a href="/contact-us.html">Contact Us</a></div>
+        <div class="btn-blue" id="display-btn"><a href="/contact-us.html">Contact Us</a></div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
 
       <!-- Parte 2 del header -->
