--- a/contact-us.html
+++ b/contact-us.html
@@ -13,19 +13,32 @@
       <div id="logo-navbar">
         <!-- Logo -->
         <figure>
-          <a href="/index.html"><img src="/resources/images/logos/circle.svg" alt="Logo Circle" /></a>
+          <img src="/resources/images/logos/circle.svg" alt="Logo Circle" />
         </figure>
         <!-- NavBar -->
-        <nav>
-          <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/index.html#recent-projects">Projects</a></li>
-            <li><a href="/index.html#services">Services</a></li>
-            <li><a href="#">About</a></li>
+        <nav class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html#recent-projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html#services">Services</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           </ul>
+
+          
         </nav>
-        <div class="btn-blue"><a href="/contact-us.html">Contact Us</a></div>
+        <div class="btn-blue" id="display-btn"><a href="/contact-us.html">Contact Us</a></div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
+
     </header>
 
     <!-- Form Concatc Us -->
