--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           </ul>
-
-          
         </nav>
-        <div class="btn-blue" id="display-btn"><a href="/contact-us.html">Contact Us</a></div>
+        <div class="btn-blue" id="display-btn">
+          <a href="/contact-us.html">Contact Us</a>
+        </div>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
