--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/resources/images/logos/favicon.ico">
     <title>Contact Us</title>
     <!-- Style CSS -->
     <link rel="stylesheet" href="resources/styles/style.css" />
