--- a/project.html
+++ b/project.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/resources/images/logos/favicon.ico">
     <!-- Style CSS -->
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
