Corregir errores del responsive

--- a/contact-us.html
+++ b/contact-us.html
@@ -60,7 +60,7 @@
       <div id="email-and-phone">
         <div>
           <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
+          <input type="email" name="email" id="email" placeholder="Enter your email"/>
         </div>
   
         <div>
