--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
 
     <main>
       <h1 id="title-project"></h1>
-      <div>
+      <div id="container-subtitle">
         <h4 id="sub-title-project"></h4>
         <p>Completed on <time> 2/2/22</time></p>
       </div>
