--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- NavBar -->
         <nav class="navbar">
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link  active" href="#">Home</a></li>
             <li class="nav-item">
               <a class="nav-link" href="#recent-projects">Projects</a>
             </li>
