--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/resources/images/logos/favicon.ico">
+    <link rel="shortcut icon" href="/resources/images/logos/favicon.ico" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
@@ -22,19 +22,23 @@
         <!-- NavBar -->
         <nav class="navbar">
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#recent-projects">Projects</a>
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/index.html#recent-projects"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#services">Services</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           </ul>
-
-          
         </nav>
-        <div class="btn-blue" id="display-btn"><a href="/contact-us.html">Contact Us</a></div>
+        <div class="btn-blue" id="display-btn">
+          <a href="/contact-us.html">Contact Us</a>
+        </div>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -42,7 +46,6 @@
           <span class="bar"></span>
         </div>
       </div>
-
     </header>
 
     <main>
